@@ -1,6 +1,7 @@
 package ru.hogwarts.school.service;
 
 import org.springframework.beans.factory.annotation.Value;
+import org.springframework.data.domain.PageRequest;
 import org.springframework.data.util.Pair;
 import org.springframework.stereotype.Service;
 import org.springframework.web.multipart.MultipartFile;
@@ -17,51 +18,94 @@ import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
+import java.util.Collection;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 @Service
 public class AvatarService {
+    @Value("${application.avatar.store}")
+    private String avatarDir;
     private final AvatarRepository avatarRepository;
     private final StudentRepository studentRepository;
     private final RecordMapper recordMapper;
-    @Value("${application.avatar.store}")
-    private String avatarDir;
 
     public AvatarService(AvatarRepository avatarRepository, StudentRepository studentRepository, RecordMapper recordMapper) {
         this.avatarRepository = avatarRepository;
         this.studentRepository = studentRepository;
         this.recordMapper = recordMapper;
     }
-
-    public AvatarRecord addAvatar(MultipartFile multipartFile, Long studentId) throws IOException {
+    public AvatarRecord addAvatar(MultipartFile avatarFile, long studentId) throws IOException {
         Student student = studentRepository.findById(studentId).orElseThrow(() -> new StudentNotFoundException(studentId));
-        byte[] data = multipartFile.getBytes();
 
-        String extension = Optional.ofNullable(multipartFile.getOriginalFilename()).map(fileName -> fileName.substring(multipartFile.getOriginalFilename().lastIndexOf("."))).orElse("");
-        Path path = Paths.get(avatarDir).resolve(studentId + extension);
-        Files.write(path, data);
+        String extension = Optional.ofNullable(avatarFile.getOriginalFilename())
+                .map(f -> f.substring(f.lastIndexOf(".")))
+                .orElse("");
+        Path path = Path.of(avatarDir, student + extension);
 
-        Avatar avatar = new Avatar();
-        avatar.setData(data);
-        avatar.setFileSize(data.length);
-        avatar.setMediaType(multipartFile.getContentType());
+        Files.createDirectories(path.getParent());
+        Files.deleteIfExists(path);
+        Files.write(path, avatarFile.getBytes());
+
+        Avatar avatar = avatarRepository.findByStudentId(studentId).orElse(new Avatar());
         avatar.setStudent(student);
         avatar.setFilePath(path.toString());
-
+        avatar.setFileSize(avatarFile.getSize());
+        avatar.setMediaType(avatarFile.getContentType());
+        avatar.setData(avatarFile.getBytes());
         return recordMapper.toRecord(avatarRepository.save(avatar));
 
     }
 
-    public Pair<byte[], String> findFromDb(Long id) {
-        Avatar avatar = avatarRepository.findById(id).orElseThrow(()-> new AvatarNotFoundException(id));
+    public Pair<byte[], String> findFromDb(long id) {
+        Avatar avatar = avatarRepository.findById(id).orElseThrow(() -> new AvatarNotFoundException(id));
         return Pair.of(avatar.getData(), avatar.getMediaType());
-
     }
-    public Pair<byte[], String> findFromFs(Long id) throws IOException {
-        Avatar avatar = avatarRepository.findById(id).orElseThrow(()-> new AvatarNotFoundException(id));
 
-        return Pair.of(Files.readAllBytes(Paths.get(avatar.getFilePath())), avatar.getMediaType());
-
+    public Pair<byte[], String> findFromFs(long id) throws IOException {
+        Avatar avatar = avatarRepository.findById(id).orElseThrow(() -> new AvatarNotFoundException(id));
+        Path path = Path.of(avatar.getFilePath());
+        return Pair.of(Files.readAllBytes(path), avatar.getMediaType());
     }
+
+    public Collection<AvatarRecord> getAllByPage(int pageNumber, int pageSize) {
+        PageRequest pageRequest = PageRequest.of(pageNumber - 1, pageSize);
+        return avatarRepository.findAll(pageRequest).getContent().stream()
+                .map(recordMapper::toRecord)
+                .collect(Collectors.toList());
+    }
+
+//    public AvatarRecord addAvatar(MultipartFile multipartFile, Long studentId) throws IOException {
+//        Student student = studentRepository.findById(studentId).orElseThrow(() -> new StudentNotFoundException(studentId));
+//        byte[] data = multipartFile.getBytes();
+//
+//        String extension = Optional.ofNullable(multipartFile.getOriginalFilename())
+//                .map(fileName -> fileName.substring(multipartFile.getOriginalFilename().lastIndexOf(".")))
+//                .orElse("");
+//        Path path = Paths.get(avatarDir).resolve(studentId + extension);
+//        Files.write(path, data);
+//
+//        Avatar avatar = new Avatar();
+//        avatar.setData(data);
+//        avatar.setFileSize(data.length);
+//        avatar.setMediaType(multipartFile.getContentType());
+//        avatar.setStudent(student);
+//        avatar.setFilePath(path.toString());
+//
+//        return recordMapper.toRecord(avatarRepository.save(avatar));
+//
+//    }
+//
+//    public Pair<byte[], String> findFromDb(Long id) throws IOException  {
+//        Avatar avatar = avatarRepository.findById(id).orElseThrow(()-> new AvatarNotFoundException(id));
+//        return Pair.of(avatar.getData(), avatar.getMediaType());
+//
+//    }
+//    public Pair<byte[], String> findFromFs(Long id) throws IOException {
+//        Avatar avatar = avatarRepository.findById(id).orElseThrow(()-> new AvatarNotFoundException(id));
+//
+//        return Pair.of(Files.readAllBytes(Paths.get(avatar.getFilePath())), avatar.getMediaType());
+//
+//    }
 }
 
